--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ installer:
     MYSQL_USER: root
     MYSQL_PASSWORD: wufg3ar
     ADMIN_USERNAME: admin
-    ADMIN_FIRSTNAME: Admin
+    ADMIN_FIRSTNAME: admin
     ADMIN_LASTNAME: istrator
     ADMIN_PASSWORD: password123
     ADMIN_FRONTNAME: admin
@@ -33,7 +33,7 @@ nginx:
   environment:
     DOMAIN: wufgear.com
     MAGENTO_ROOT: /var/www/html/web
-    MAGENTO_DEVELOPERMODE: 1
+    MAGENTO_DEVELOPERMODE: 0
     SSL_CERTIFICATE_PATH: /etc/ssl/certs/ssl-cert-snakeoil.pem
     SSL_CERTIFICATE_KEY_PATH: /etc/ssl/private/ssl-cert-snakeoil.key
   volumes:
@@ -42,7 +42,7 @@ nginx:
   volumes_from:
     - php
 php:
-  build: docker-images/php/5.6
+  build: ./docker-images/php/5.5
   links:
     - "cache:rediscache"
     - "sessions:redissession"
