--- a/docker-images/installer/php/php.ini
+++ b/docker-images/installer/php/php.ini
@@ -9,4 +9,19 @@ max_input_time = 60
 memory_limit = 2G
 upload_max_filesize = 32M
 
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+; Error handling and logging ;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+error_reporting = E_ALL & ~E_NOTICE | E_DEPRECATED
+display_errors = Off
+display_startup_errors = Off
+log_errors = On
+log_errors_max_len = 1024
+ignore_repeated_errors = Off
+ignore_repeated_source = Off
+report_memleaks = On
+track_errors = Off
+html_errors = Off
+
 date.timezone = "UTC"
