--- a/docker-images/installer/Dockerfile
+++ b/docker-images/installer/Dockerfile
@@ -27,8 +27,8 @@ RUN buildDeps=" \
         zip \
     && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false $buildDeps \
 
-COPY php/php.ini /usr/local/etc/php/php.ini
-COPY php/php-fpm.conf /usr/local/etc/php-fpm.conf
+COPY ./php.ini /usr/local/etc/php/php.ini
+COPY ./php-fpm.conf /usr/local/etc/php-fpm.conf
 
 # Install magerun using new url as described at http://magerun.net/changed-download-urls-for-phar-version/
 RUN curl -o magerun http://files.magerun.net/n98-magerun-latest.phar \
@@ -36,7 +36,8 @@ RUN curl -o magerun http://files.magerun.net/n98-magerun-latest.phar \
     && cp ./magerun /usr/local/bin/ \
     && rm -f ./magerun
 
-ENV INSTALLER_VERSION 1.0.0
+# optimized as much as oe can - all lines/layers above shuld run fast as they are the same as standard php5.5-fpm as used in other container images in this project
+ENV INSTALLER_VERSION 1.1.0
 
 # Install Tools
 RUN apt-get update && apt-get install -y \
@@ -44,20 +45,20 @@ RUN apt-get update && apt-get install -y \
         telnet \
         mysql-client \
         netcat \
-        git-core \
+        git \
         zip \
     && rm -rf /var/lib/apt/lists/*
 
 # Add a custom magerun configuration
-COPY magerun/n98-magerun.yaml.tmpl /etc/n98-magerun.yaml.tmpl
+COPY ./magerun/n98-magerun.yaml.tmpl /etc/n98-magerun.yaml.tmpl
 
-# Add utility scripts
-COPY bin/substitute-env-vars.sh /bin/substitute-env-vars.sh
+# Add transformation/utility script
+COPY ./bin/substitute-env-vars.sh /bin/substitute-env-vars.sh
 RUN chmod +x /bin/substitute-env-vars.sh
 
 # Add custom Magento configuration files
-COPY magento/local.xml.tmpl /etc/local.xml.tmpl
-COPY magento/fpc.xml.tmpl /etc/fpc.xml.tmpl
+COPY ./magento/local.xml.tmpl /etc/local.xml.tmpl
+COPY ./magento/fpc.xml.tmpl /etc/fpc.xml.tmpl
 
 # Install composer
 RUN curl -sS https://getcomposer.org/installer | php -- --filename=composer --install-dir=bin
