--- a/docker-images/php/5.5/Dockerfile
+++ b/docker-images/php/5.5/Dockerfile
@@ -25,7 +25,7 @@ RUN buildDeps=" \
         pdo_mysql \
         soap \
         zip \
-    && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false $buildDeps \
+    && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false $buildDeps
 
 COPY ./php.ini /usr/local/etc/php/php.ini
 COPY ./php-fpm.conf /usr/local/etc/php-fpm.conf
